# rig-agent-tools-example

./: .gitignore  Cargo.toml
src/: error.rs  lib.rs  main.rs
src/client/: mod.rs  types.rs
src/tools/: arbitrage.rs  mod.rs  price.rs
