[package]
name = "rig-agent-tools-example"
version = "0.1.0"
edition = "2021"
authors = ["tachikoma000"]
description = "Example Rig Agent with GeckoTerminal API integration"

[dependencies]
rig-core = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-trait = "0.1"
prettytable = "0.10.0"
